Sat Jul 21 13:18:48 GMT 2012  Olly Betts <olly@survex.com>

	* lua/docs/examples/simpleexpand.lua,
	  lua/docs/examples/simplematchdecider.lua,
	  lua/docs/examples/simplesearch.lua: query:get_description() should
	  be str(query).  Fixes #600.
	* lua/docs/index.html: Document that get_description() is mapped to
	  str(), and end() to _end().

Thu Jul 12 05:11:26 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Overhaul checking the C# tools to use modern names in
	  preference.

Tue Jul 03 03:13:40 GMT 2012  Dan Colish <dcolish@gmail.com>

	* generic/.gitignore,php/.gitignore,tcl8/.gitignore: Update for
	  except.i generation

Tue Jul 03 03:10:19 GMT 2012  Dan Colish <dcolish@gmail.com>

	* configure.ac,generic/generic.mk:Configure DYLD_LIBRARY_PATH on OSX
	  separately from MACOSX_DEPLOYMENT_TARGET

Sun Jul 01 11:37:53 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2 branch.

Sun Jun 10 05:42:34 GMT 2012  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java/Makefile.am,lua/Makefile.am,perl/Makefile.am,
	  php/Makefile.am,python/Makefile.am,ruby/Makefile.am,
	  tcl8/Makefile.am: Fix recent swig-depcomp change to use '=' rather than
	  the apparently less portable ':='.

Mon Jun 04 12:07:08 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,csharp/csharp.i,fake_dbfactory.i,
	  java/java.i,lua/lua.i,perl/perl.i,php/php.i,python/python.i,
	  ruby/extra.i,ruby/ruby.i,ruby/xapian.rb,tcl8/tcl.i,xapian-headers.i,
	  xapian.i: For all languages except C# and Java, wrap the functions
	  declared in xapian/dbfactory.h by getting SWIG to parse the header.
	  This means we now wrap the WritableDatabase form of
	  Xapian::Auto::open_stub() for these languages.

Mon Jun 04 12:01:06 GMT 2012  Olly Betts <olly@survex.com>

	* swig-depcomp: Script which wraps a call to SWIG and tells it to
	  generate dependencies, and then adjust the generated dependencies.