@@ -4,7 +4,7 @@
  * Based on the perl XS wrapper files.
  *
  * Copyright (C) 2009 Kosei Moriyama
- * Copyright (C) 2011 Olly Betts
+ * Copyright (C) 2011,2012 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -369,6 +369,8 @@ sub CLONE_SKIP { 1 }
 package Search::Xapian::DateValueRangeProcessor;
 sub CLONE_SKIP { 1 }
 package Search::Xapian::NumberValueRangeProcessor;
+sub CLONE_SKIP { 1 }
+package Search::Xapian::FieldProcessor;
 sub CLONE_SKIP { 1 }
 package Search::Xapian::QueryParser;
 sub CLONE_SKIP { 1 }
